Revert "fixed error handling for inputs"
This reverts commit 59264b9f06f90a53daaddb20970701cf0d1696bd.

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                 <div class="result__view-values">
                   <div class="values-monthly">
                     <p>Your monthly repayments</p>
-                    <p class="monthly-price">£0</p>
+                    <p class="monthly-price">£1,797.74</p>
                   </div>
                   <div class="values-termly">
                     <p>Total you'll repay over the term</p>
-                    <p class="termly-price">£0</p>
+                    <p class="termly-price">£539,322.94</p>
                   </div>
                 </div>
               </div>
@@ -171,6 +171,34 @@
         </div>
       </div>
     </section>
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="ma" >
+      <input
+        type="radio"
+        value="interest-only"
+        name="mortgage-type"
+        class="" id="yo"
+      />
+      <label for="yo">Interest Only</label>
+    </div>
+    <div class="ma" >
+      <input
+        type="radio"
+        value="interest-only"
+        name="mortgage-type"
+        class="" id="oh"
+      />
+      <label for="oh">Interest Only</label>
+    </div> -->
 
     <!-- <script src="calc.js"></script> -->
     <script src="trial.js"></script>
